--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -30,5 +30,14 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="23dp"
         android:text="Result Comparison List" />
+    
+    <Button
+        android:id="@+id/mapButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/mainButton2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="23dp"
+        android:text="Comparison Map"/>
 
 </RelativeLayout>
