--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -3,5 +3,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    
+    <!-- horizontal separation between a label and the thing it's labeling -->
+    <dimen name="label_hsep">10sp</dimen>
 
 </resources>
