--- a/res/layout/activity_comparison.xml
+++ b/res/layout/activity_comparison.xml
@@ -27,7 +27,7 @@
 	        android:layout_width="0dp"
 	        android:layout_height="wrap_content"
 	        android:layout_weight="0.8"
-	        android:gravity="left" />
+	        android:gravity="start" />
 	
 	    <TextView
 	        android:id="@+id/comparisonSortDistance"
@@ -35,7 +35,7 @@
 	        android:layout_height="wrap_content"
 	        android:layout_weight="0.1"
 	        android:text="@string/comparison_sort"
-	        android:gravity="left" />
+	        android:gravity="start" />
 	
 	    <TextView
 	        android:id="@+id/comparisonSortCrowdedness"
@@ -43,7 +43,7 @@
 	        android:layout_height="wrap_content"
 	        android:layout_weight="0.1"
 	        android:text="@string/comparison_sort"
-	        android:gravity="left" />
+	        android:gravity="start" />
 	
 	</LinearLayout>
 
