--- a/res/layout/activity_query.xml
+++ b/res/layout/activity_query.xml
@@ -42,6 +42,12 @@
         	android:layout_height="wrap_content"
         	android:textAppearance="?android:attr/textAppearanceMedium"
         	android:text="Tags:" />
+        
+        <ImageButton
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:src="@drawable/ic_action_edit"
+        	android:onClick="handleEditTags" />
 
     </LinearLayout>
 	
