--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,31 +6,36 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.illinois.engr.web.cs465uiui.MainActivity" >
+    tools:context="edu.illinois.engr.web.cs465uiui.MainActivity"
+    android:orientation="vertical"
+    android:gravity="center_horizontal" >
 
     <Button
-        android:id="@+id/searchButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="Search" />
-
-    <Button
-        android:id="@+id/comparisonListButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/searchButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="23dp"
-        android:text="Result Comparison List" />
+        android:layout_marginTop="@dimen/start_vsep"
+        android:text="Search"
+        android:onClick="goToSearch" />
     
     <Button
-        android:id="@+id/mapButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/comparisonListButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="23dp"
-        android:text="Comparison Map"/>
+        android:layout_marginTop="@dimen/start_vsep"
+        android:text="Compare Restaurants"
+        android:onClick="goToQuery" />
 
-</RelativeLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/start_vsep"
+        android:text="Result Comparison List"
+        android:onClick="goToComparisonList" />
+    
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/start_vsep"
+        android:text="Comparison Map"
+        android:onClick="goToComparisonMap" />
+
+</LinearLayout>
