--- a/res/layout/activity_query.xml
+++ b/res/layout/activity_query.xml
@@ -35,13 +35,27 @@
     <!-- tags -->
     <LinearLayout
     	android:layout_width="match_parent"
-    	android:layout_height="wrap_content" >
+    	android:layout_height="wrap_content"
+    	android:gravity="center_vertical" >
 
         <TextView
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:textAppearance="?android:attr/textAppearanceMedium"
         	android:text="Tags:" />
+        
+        <TextView android:id="@+id/act_query_alltags"
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:textAppearance="?android:attr/textAppearanceMedium"
+        	style="@style/emphLabel"
+        	android:text="-all/any-" />
+        
+        <TextView android:id="@+id/act_query_tags"
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:textAppearance="?android:attr/textAppearanceMedium"
+        	android:text="---long tags list---" />
         
         <ImageButton
         	android:layout_width="wrap_content"
