--- a/res/layout/activity_query.xml
+++ b/res/layout/activity_query.xml
@@ -104,6 +104,7 @@
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:layout_gravity="center_horizontal"
-    	android:text="Compare" />
+    	android:text="Compare"
+    	android:onClick="handleDone" />
 
 </LinearLayout>
