--- a/res/layout/activity_graph.xml
+++ b/res/layout/activity_graph.xml
@@ -2,6 +2,27 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="vertical" >
+	
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:gravity="center" >
+
+		<TextView
+			android:id="@+id/act_graph_name"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="--restaurant name--"
+			android:textAppearance="?android:attr/textAppearanceLarge" />
+
+		<TextView
+			android:id="@+id/act_graph_location"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="---restaurant location---"
+			android:textAppearance="?android:attr/textAppearanceSmall" />
+		
+	</LinearLayout>
 
 	<LinearLayout
 		android:layout_width="match_parent"
