--- a/res/layout/sub_graph_navday.xml
+++ b/res/layout/sub_graph_navday.xml
@@ -6,7 +6,9 @@
     	android:id="@+id/sub_navday_name"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
+    	android:layout_weight="1"
     	android:text="--date text--"
-    	android:textAppearance="?android:attr/textAppearanceLarge" />
+    	android:textAppearance="?android:attr/textAppearanceLarge"
+    	android:background="@drawable/graph_nav" />
 
 </FrameLayout>
