--- a/res/drawable/graph_nav.xml
+++ b/res/drawable/graph_nav.xml
@@ -1,6 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-	<solid android:color="#FFFFFF"/>
-	<stroke android:width="3dip" android:color="#444444" />
+	<stroke android:width="3dip" android:color="@color/dark" />
 	<corners android:radius="5dp"/>
 	<padding android:left="10dip" android:top="10dip" android:right="10dip" android:bottom="10dip" />
 </shape>
