graph now supports focusing

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,5 +1,5 @@
 <resources>
 	<color name="emphasis">#004488</color>
-	<color name="light">#AAAAAA</color>
-	<color name="dark">#444444</color>
+	<color name="weak">#333</color>
+	<color name="strong">#888</color>
 </resources>
