--- a/res/layout/activity_graph.xml
+++ b/res/layout/activity_graph.xml
@@ -39,14 +39,29 @@
 			android:layout_height="match_parent"
 			android:layout_width="0dp"
 			android:layout_weight="1"
+			android:gravity="center_horizontal"
 			android:orientation="vertical" >
 
 			<TextView
-				android:id="@+id/textView1"
+				android:id="@+id/act_graph_focuslevel"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:text="Large Text"
+				android:text="-focus-"
 				android:textAppearance="?android:attr/textAppearanceLarge" />
+
+			<TextView
+				android:id="@+id/act_graph_focustime"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="-focus-"
+				android:textAppearance="?android:attr/textAppearanceMedium" />
+
+			<TextView
+				android:id="@+id/act_graph_focusexplanation"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="---focus explanation of crowd level---"
+				android:textAppearance="?android:attr/textAppearanceSmall" />
 			
 		</LinearLayout>		
 	</LinearLayout>
