--- a/res/layout/activity_graph.xml
+++ b/res/layout/activity_graph.xml
@@ -23,7 +23,8 @@
 			android:textAppearance="?android:attr/textAppearanceSmall" />
 		
 	</LinearLayout>
-
+	
+	
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="0dp"
@@ -34,7 +35,7 @@
 			android:layout_height="match_parent"
 			android:layout_width="0dp"
 			android:layout_weight="4" />
-		
+			
 		<LinearLayout
 			android:layout_height="match_parent"
 			android:layout_width="0dp"
@@ -63,9 +64,43 @@
 				android:text="---focus explanation of crowd level---"
 				android:textAppearance="?android:attr/textAppearanceSmall" />
 			
-		</LinearLayout>		
+		</LinearLayout>
+		
 	</LinearLayout>
-
+	
+	
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal" >
+		
+		<ImageButton
+			android:id="@+id/act_graph_zoom_in"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:src="@drawable/ic_action_search" />
+		
+		<ImageButton
+			android:id="@+id/act_graph_zoom_out"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:src="@drawable/ic_action_undo" />
+		
+		<ImageButton
+			android:id="@+id/act_graph_zoom_left"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:src="@drawable/ic_action_back" />
+		
+		<ImageButton
+			android:id="@+id/act_graph_zoom_right"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:src="@drawable/ic_action_forward" />
+		
+	</LinearLayout>
+	
+	
 	<LinearLayout
 		android:id="@+id/act_graph_navbar"
 		android:layout_width="match_parent"
