--- a/res/layout/activity_graph.xml
+++ b/res/layout/activity_graph.xml
@@ -98,6 +98,12 @@
 			android:layout_height="wrap_content"
 			android:src="@drawable/ic_action_forward" />
 		
+		<Button
+			android:id="@+id/act_graph_zoom_reset"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="O" />
+		
 	</LinearLayout>
 	
 	
